<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Carteiro</string>
  <string name="app_url">http://carteiroapp.com/</string>

  <string name="blog_url">http://blog.carteiroapp.com/</string>
  <string name="facebook_url">http://www.facebook.com/carteiroapp</string>
  <string name="feedback_url">http://feedback.carteiroapp.com/</string>

  <string name="websro_url">http://websro.correios.com.br/sro_bin/txect01$.QueryList?P_LINGUA=001&#038;P_TIPO=001&#038;P_COD_UNI=%s</string>

  <!-- Buttons -->
  <string name="positive_btn">OK</string>
  <string name="negative_btn">Cancel</string>
  <string name="add_btn">Add</string>
  <string name="rename_btn">Rename</string>
  <string name="delete_btn">Delete</string>
  <string name="install_btn">Install</string>
  <string name="quit_btn">Quit</string>
  <string name="retry_btn">Retry</string>
  <string name="buy_btn">Buy</string>
  <string name="continue_btn">Continue</string>

  <!-- Options Menu -->
  <string name="add_opt">Add</string>
  <string name="share_opt">Share</string>
  <string name="preferences_opt">Settings</string>
  <string name="search_opt">Search</string>
  <string name="edit_opt">Edit</string>
  <string name="websro_opt">SRO Correios</string>
  <string name="fav_opt">Favorite</string>
  <string name="scan_opt">Scan</string>
  <string name="place_opt">Locate</string>

  <!-- ViewPager Indicator -->
  <string name="category_returned">Returned</string>
  <string name="category_unknown">Unknown</string>
  <string name="category_irregular">Irregular</string>
  <string name="category_all">All</string>
  <string name="category_favorites">Favorite</string>
  <string name="category_available">Available</string>
  <string name="category_delivered">Delivered</string>

  <!-- Add Activity -->
  <string name="title_add">Add item</string>

  <string name="hint_tracking_code">Tracking number</string>
  <string name="hint_item_description">Item description</string>
  <string name="checkbox_add_favorite">Mark as favorite</string>

  <string name="title_tracking_obj">Tracking item&#8230;</string>
  <string name="title_alert_not_found">Add item not found?</string>
  <string name="title_alert_net_error">Add item offline?</string>
  <string name="title_alert_delivered_item">Add delivered item?</string>
  <string name="title_alert_returned_item">Add returned item?</string>

  <string name="msg_alert_empty_cod">Enter the item tracking number.</string>
  <string name="msg_alert_wrong_length_cod">The tracking number must have 13 digits.</string>
  <string name="msg_alert_bad_format_cod">Nonstandard tracking number.\nValid example: SS123456789BR</string>
  <string name="msg_alert_invalid_dv_cod">Invalid tracking number: check digit does not match.</string>
  <string name="msg_alert_default_error_cod">Invalid tracking number.</string>
  <string name="msg_alert_not_found">Check if the number %s is correct.\n\nIn case the item has been posted recently, it is natural that its data are not yet in the system.</string>
  <string name="msg_alert_net_error">The Correios might be offline or a network connection was not found.\n\nNew contact attempts will be made during the scheduled syncs.</string>
  <string name="msg_alert_delivered_item">The item has already been delivered to its addressee. Newer status updates are unlikely.</string>
  <string name="msg_alert_returned_item">The item has already been returned to its sender. Newer status updates are unlikely.</string>

  <string name="title_alert_barcode_install">Install Barcode Scanner?</string>
  <string name="msg_alert_barcode_install">The app is required to read barcodes and QR codes.</string>

  <string name="msg_alert_cod_not_found">Tracking number not found. Check if the page has informations about the item.</string>

  <!-- Unlicensed messages -->
  <string name="unlicensed_dialog_title">Unlicensed app</string>
  <string name="unlicensed_dialog_body">This app is not licensed. Please purchase it on Google Play to receive updates and support its development.</string>
  <string name="unlicensed_dialog_retry_body">Could not validate license. Check if there is a network connection.</string>

  <!-- Notifications -->
  <string name="notf_title_syncing">Syncing items&#8230;</string>
  <string name="notf_info_syncing">%1$d/%2$d</string>
  <string name="notf_tckr_single_obj">%1$s: %2$s</string>
  <string name="notf_tckr_multi_obj">%d items updated</string>
  <string name="notf_line_multi_obj"><![CDATA[<font color="#CCCCCC">%1$s</font> %2$s]]></string>
  <plurals name="notf_summ_multi_obj">
    <item quantity="one">1 item delivered</item>
    <item quantity="other">%d items delivered</item>
  </plurals>

  <!-- Postal List -->
  <string name="text_empty_list">No items.</string>
  <string name="text_unknown_location">Unknown location</string>

  <string name="title_send_list">Send via</string>
  <string name="subject_send_list">Tracking list</string>
  <string name="text_send_list_line_1">%s &#9734;\n</string>
  <string name="text_send_list_line_1_fav">%s &#9733;\n</string>
  <string name="text_send_list_line_2">%s\n</string>
  <string name="text_send_list_line_3">%1$s, %2$s\n\n</string>

  <!--  Toasts -->
  <string name="toast_item_added">%s added.</string>
  <string name="toast_item_renamed">%1$s renamed to %2$s.</string>
  <string name="toast_item_deleted">%s deleted.</string>
  <string name="toast_item_already_exists">The item %s is already in the tracking list.</string>
  <string name="toast_sync_error">Sync error: %s</string>

  <!-- Context Menu -->
  <string name="opt_refresh_item">Refresh</string>
  <string name="opt_rename_item">Rename</string>
  <string name="opt_toggle_fav">%s favorite</string>
    <string name="label_mark_as">Mark as</string>
    <string name="label_unmark_as">Unmark as</string>
  <string name="opt_view_place">View map location</string>
  <string name="opt_share_status">Share status</string>
  <string name="opt_open_websro">Open Correios SRO</string>
  <string name="opt_delete_item">Delete</string>

  <!-- Dialogs -->
  <string name="title_alert_delete">Delete %s?</string>
  <string name="msg_alert_delete">The item\'s history will be erased as well.</string>

  <!-- Record Activity -->
  <string name="title_record">Item history</string>
  <string name="share_title">Share via</string>
  <string name="share_status_subject">Item status</string>
  <string name="share_status_text">%1$s %2$s, %3$s #carteiroapp</string>

  <!-- Preferences Activity -->
  <string name="title_preferences">Settings</string>

  <string name="pref_general_category">General settings</string>
  <string name="pref_auto_sync_title">Automatic syncing</string>
  <string name="pref_auto_sync_summary">Automatically sync items</string>
  <string name="pref_refresh_interval_title">Sync interval</string>
  <string name="pref_refresh_interval_summary">Sync every %s</string>
  <string-array name="array_refresh_interval">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>1 day</item>
  </string-array>
  <string name="pref_sync_favorites_only_title">Only sync favorites</string>
  <string name="pref_sync_favorites_only_summary">Only sync items marked as favorites</string>
  <string name="pref_dont_sync_delivered_items_title">Do not sync delivered items</string>
  <string name="pref_dont_sync_delivered_items_summary">Ignore already delivered or returned items when syncing</string>
  <string name="pref_activate_notifications_title">Notifications</string>
  <string name="pref_activate_notifications_summary">Enable system notifications</string>

  <string name="pref_notification_category">Notification settings</string>
  <string name="pref_notify_sync_title">Ongoing syncs</string>
  <string name="pref_notify_sync_summary">Notify progress of ongoing syncs</string>
  <string name="pref_notify_all_summary">Notify updates of all items</string>
  <string name="pref_notify_favorites_summary">Notify updates of items marked as favorites</string>
  <string name="pref_notify_available_summary">Notify updates of items to be picked up or out for departure</string>
  <string name="pref_notify_delivered_summary">Notify updates of delivered items</string>
  <string name="pref_notify_irregular_summary">Notify updates of items with issues or being treated</string>
  <string name="pref_notify_unknown_summary">Notify updates of items not found or whose status is indeterminate</string>
  <string name="pref_notify_returned_summary">Notify updates of items refused or being returned</string>

  <string name="pref_indication_category">Indication settings</string>
  <string name="pref_ringtone_title">Notification ringtone</string>
  <string name="pref_ringtone_summary">Set notification ringtone</string>
  <string name="pref_lights_title">Notification light</string>
  <string name="pref_lights_summary">Flash LED on incoming notifications</string>
  <string name="pref_vibrate_title">Vibrate</string>
  <string name="pref_vibrate_summary">Vibrate on incoming notifications</string>

  <string name="pref_about_category">About</string>
  <string name="pref_blog_title">Carteiro Blog</string>
  <string name="pref_blog_summary">Stay up to date on what\'s new</string>
  <string name="pref_facebook_title">Facebook Page</string>
  <string name="pref_facebook_summary">Like Carteiro and recommend to your friends</string>
  <string name="pref_feedback_title">Feedback &#038; Support</string>
  <string name="pref_feedback_summary">Ask your questions and suggest improvements</string>

  <string name="pref_version_category">Version</string>
  <string name="pref_version_title">%1$s %2$s</string>
  <string name="pref_version_summary">© %d Rafael Bardini</string>

  <!-- Search Activity -->
  <string name="title_search">Items</string>
  <string name="subtitle_search">Search results</string>
  <string name="search_hint">Search items</string>
  <string name="search_desc">Number and description of your tracked items</string>

  <!-- Content Description -->
  <string name="desc_status">Status</string>
</resources>
