<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item android:id="@+id/fav_opt"
    android:icon="@drawable/ic_action_star_off"
    android:title="@string/fav_opt"
    android:showAsAction="always" />

  <item android:id="@+id/place_opt"
    android:icon="@drawable/ic_action_place"
    android:title="@string/place_opt"
    android:showAsAction="always" />

  <item android:id="@+id/share_opt"
    android:icon="@drawable/ic_action_share"
    android:title="@string/share_opt"
    android:showAsAction="never" />

  <item android:id="@+id/websro_opt"
    android:icon="@drawable/ic_action_web"
    android:title="@string/websro_opt"
    android:showAsAction="always" />

  <item android:id="@+id/edit_opt"
    android:icon="@drawable/ic_action_edit"
    android:title="@string/edit_opt"
    android:showAsAction="never" />

</menu>
